ecmascript/parser/tests/test262-error-references/fail/90193ee960b49acd.js.stderr
error: Expected an octal digit
 --> $DIR/tests/test262-parser/fail/90193ee960b49acd.js:1:3
  |
1 | 0o9
  |   ^

